--- a/views/producaoTurnoAtual.ejs
+++ b/views/producaoTurnoAtual.ejs
@@ -120,6 +120,19 @@
             border-radius: 10px;
     }
 
+    .gear {
+        width: 40px;
+        height: 40px;
+        animation-name: spin;
+        animation-timing-function: linear;
+        animation-iteration-count: infinite;
+    }
+
+    @keyframes spin {
+        from { transform: rotate(0deg); }
+        to { transform: rotate(360deg); }
+    }
+
     </style>
 </head>
 
