Adicionado outros manifest para outros tipo de recurso e setado manifest da pagina de recurso_fila dinamico conforme o tipo de recurso

--- a/views/recursos_fila.ejs
+++ b/views/recursos_fila.ejs
@@ -51,7 +51,7 @@
 <meta name="theme-color" content="#000000">
 
 <!-- Link para o arquivo manifest.json -->
-<link rel="manifest" href="/files/manifestExtrusao.json">
+<link rel="manifest" href="/files/manifest<%= tipo_recurso %>.json">
 
 <!-- Tags para iOS (Safari) -->
 <meta name="apple-mobile-web-app-capable" content="yes">
