Adicionado novamente a coluna do item na versao mobile

--- a/views/fila.ejs
+++ b/views/fila.ejs
@@ -326,7 +326,7 @@ body {
                     <th class="hide-mobile">Fim Prog.</th>
                     <th>Peso OP.</th>
                     <th>Qtd. OP</th>
-                    <th class="hide-mobile">Item</th>
+                    <th>Item</th>
                     <th class="hide-mobile">Descrição Item</th>
                     <% if ( !maquina[0].etapa.toString().startsWith('1')) { %>
                         <th class="hide-mobile">Entrega</th>
@@ -372,7 +372,7 @@ body {
                         <td class="hide-mobile"><%=functions.dateFormat("custom",maquina.fimprog)%></td>
                         <td><%=maquina.peso.toLocaleString('pt-BR')%></td>
                         <td><%=maquina.quantidade.toLocaleString('pt-BR')%></td>
-                        <td class="codigo_item hide-mobile" name="codigo_item" id="codigo_item"><%=maquina.codigo_item%></td>
+                        <td class="codigo_item" name="codigo_item" id="codigo_item"><%=maquina.codigo_item%></td>
                         <td class="hide-mobile"><%=maquina.descricao_item%></td>
                         <% if ( !maquina.etapa.toString().startsWith('1')) { %>
                             <td class="hide-mobile"><%=maquina.previsoes_entregas%></td>
